# cyton-ros-pkg

./: CMakeLists.txt  ProjectHome.md  ROS_Cyton_Interface.md
action/: cyton.action
include/: cytonController.h
launch/: cyton.launch
src/: actinSE_node.cpp  cyton_move.cpp  send_joints.cpp
src/cyton/msg/: _cytonAction.py  _cytonActionFeedback.py  _cytonActionGoal.py  _cytonActionResult.py  _cytonFeedback.py  _cytonGoal.py  _cytonResult.py
